# qtcalculator

./: .gitignore  CMakeLists.txt  README.md
src/: evaluator.cpp  lexer.cpp  main.cpp  math_expression.hpp  parser.cpp
src/ui/: calculator_ui.cpp  calculator_ui.hpp  display_panel.cpp  expression_state.cpp  function_token_mapper.cpp  history_panel.cpp  keypad_panel.cpp  style_sheet.cpp
